src/assets/css/theme.css
@theme {
  --color-primary-dark: #7f1734;
  --color-primary-light: #bf4f51;
  --color-body-dark: #b9bbc4;
  --color-body-light: #dcdde2;
  --color-secondary: #173282;
  --color-highlight: #ffd700;
  --color-light: #fcfbfc;
  --color-dark: #000814;
  --color-selection: #9ec6d6;
  --color-error: #e8f3ff;
  --color-form-dark: #50325a;
  --color-form-light: #846f8b;
  --color-form-border-dark: #494949;
  --color-form-border-light: #626262;
  --font-sans: "Bebas Neue", sans-serif;
  --font-sans2: "Lato", sans-serif;
  --text-2-5xl: 1.75rem;
  --text-3-5xl: 2rem;
  --text-4-5xl: 2.5rem;
}

